--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -1,6 +1,18 @@
 body {
 
 font-family: Verdana;
-font-size: 14px;
+font-size: 14pt;
 
+}
+
+h1, h2, h3
+{
+	font-family: Verdana;
+
+}
+
+p
+{
+	font-family: Verdana;
+	font-size: 12pt;
 }
